[gd_scene load_steps=6 format=3 uid="uid://b2jpwjdx3imny"]

[ext_resource type="Script" uid="uid://dumqk4tkjyjhi" path="res://LoadGameScene/LoadGameScene.gd" id="1_pue37"]
[ext_resource type="FontFile" uid="uid://bwyo2j22ormdr" path="res://Font/OldLondon.ttf" id="2_3xo1p"]
[ext_resource type="Texture2D" uid="uid://bo1xrha3ooquo" path="res://Backgrounds/load.png" id="2_x76e4"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7rfyt"]
texture = ExtResource("2_x76e4")
expand_margin_right = 40.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2kv8t"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pue37")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1155.0
offset_bottom = 649.0
theme_override_styles/panel = SubResource("StyleBoxTexture_7rfyt")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 414.0
offset_top = 225.0
offset_right = 686.0
offset_bottom = 507.0

[node name="LoadGame1" type="Button" parent="Panel/VBoxContainer"]
material = SubResource("ShaderMaterial_2kv8t")
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_hover_pressed_color = Color(0.760784, 0.639216, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.843137, 0, 1)
theme_override_colors/font_pressed_color = Color(0.759651, 0.638524, 7.70092e-07, 1)
theme_override_fonts/font = ExtResource("2_3xo1p")
theme_override_font_sizes/font_size = 40
text = "Slot 1
"

[node name="LoadGame2" type="Button" parent="Panel/VBoxContainer"]
material = SubResource("ShaderMaterial_2kv8t")
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_hover_pressed_color = Color(0.760784, 0.639216, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.843137, 0, 1)
theme_override_colors/font_pressed_color = Color(0.759651, 0.638524, 7.70092e-07, 1)
theme_override_fonts/font = ExtResource("2_3xo1p")
theme_override_font_sizes/font_size = 40
text = "Slot 2"

[node name="LoadGame3" type="Button" parent="Panel/VBoxContainer"]
material = SubResource("ShaderMaterial_2kv8t")
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_hover_pressed_color = Color(0.760784, 0.639216, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.843137, 0, 1)
theme_override_colors/font_pressed_color = Color(0.759651, 0.638524, 7.70092e-07, 1)
theme_override_fonts/font = ExtResource("2_3xo1p")
theme_override_font_sizes/font_size = 40
text = "Slot 3"

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 297.0
offset_top = 78.0
offset_right = 801.0
offset_bottom = 209.0
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_3xo1p")
theme_override_font_sizes/font_size = 55
text = "Load your game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="Button" parent="Panel"]
material = SubResource("ShaderMaterial_2kv8t")
layout_mode = 0
offset_left = 40.0
offset_top = 29.0
offset_right = 113.0
offset_bottom = 69.0
size_flags_vertical = 6
theme_override_colors/font_hover_pressed_color = Color(0.760784, 0.639216, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.843137, 0, 1)
theme_override_colors/font_pressed_color = Color(0.759651, 0.638524, 7.70092e-07, 1)
theme_override_fonts/font = ExtResource("2_3xo1p")
theme_override_font_sizes/font_size = 40
text = "Back"
flat = true

[connection signal="pressed" from="Panel/VBoxContainer/LoadGame1" to="." method="_on_load_game_1_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/LoadGame2" to="." method="_on_load_game_2_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/LoadGame3" to="." method="_on_load_game_3_pressed"]
[connection signal="pressed" from="Panel/BackButton" to="." method="_on_back_button_pressed"]
