extends Control


func _on_load_game_1_pressed() -> void:
	pass # Replace with function body.


func _on_load_game_2_pressed() -> void:
	pass # Replace with function body.


func _on_load_game_3_pressed() -> void:
	pass # Replace with function body.


func _on_back_button_pressed() -> void:
	get_tree().change_scene_to_file("res://HomeScene/HomeScene.tscn")
